--- a/CodeBase/analysis_covid_poverty.ipynb
+++ b/CodeBase/analysis_covid_poverty.ipynb
@@ -12,8 +12,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "217392e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>county</th>\n",
+       "      <th>population</th>\n",
+       "      <th>total cases</th>\n",
+       "      <th>total deaths</th>\n",
+       "      <th>hospital beds</th>\n",
+       "      <th>hospital beds usage</th>\n",
+       "      <th>hospital beds covid</th>\n",
+       "      <th>hospital icu beds</th>\n",
+       "      <th>hospital icu beds usage</th>\n",
+       "      <th>hospital icu beds covid</th>\n",
+       "      <th>vaccination initiated</th>\n",
+       "      <th>vaccination completed</th>\n",
+       "      <th>vaccination initiated ratio</th>\n",
+       "      <th>vaccination completed ratio</th>\n",
+       "      <th>vaccination addl dose</th>\n",
+       "      <th>vaccination addl dose ratio</th>\n",
+       "      <th>vaccination booster</th>\n",
+       "      <th>vaccination booster ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Aleutians East Borough</td>\n",
+       "      <td>3337</td>\n",
+       "      <td>812</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2900.0</td>\n",
+       "      <td>2498.0</td>\n",
+       "      <td>0.869</td>\n",
+       "      <td>0.749</td>\n",
+       "      <td>1038.0</td>\n",
+       "      <td>0.311</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>0.060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Aleutians West Census Area</td>\n",
+       "      <td>5634</td>\n",
+       "      <td>1174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4410.0</td>\n",
+       "      <td>3637.0</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>0.646</td>\n",
+       "      <td>1425.0</td>\n",
+       "      <td>0.253</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>0.089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Anchorage Municipality</td>\n",
+       "      <td>288000</td>\n",
+       "      <td>121792</td>\n",
+       "      <td>284</td>\n",
+       "      <td>559.0</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>230587.0</td>\n",
+       "      <td>205043.0</td>\n",
+       "      <td>0.801</td>\n",
+       "      <td>0.712</td>\n",
+       "      <td>103924.0</td>\n",
+       "      <td>0.361</td>\n",
+       "      <td>47001.0</td>\n",
+       "      <td>0.163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Bethel Census Area</td>\n",
+       "      <td>18386</td>\n",
+       "      <td>13328</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13690.0</td>\n",
+       "      <td>12693.0</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>0.690</td>\n",
+       "      <td>6688.0</td>\n",
+       "      <td>0.364</td>\n",
+       "      <td>1806.0</td>\n",
+       "      <td>0.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>Bristol Bay Borough</td>\n",
+       "      <td>836</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  state                      county  population  total cases  total deaths  \\\n",
+       "0    AK      Aleutians East Borough        3337          812             0   \n",
+       "1    AK  Aleutians West Census Area        5634         1174             0   \n",
+       "2    AK      Anchorage Municipality      288000       121792           284   \n",
+       "3    AK          Bethel Census Area       18386        13328             0   \n",
+       "4    AK         Bristol Bay Borough         836            0             0   \n",
+       "\n",
+       "   hospital beds  hospital beds usage  hospital beds covid  hospital icu beds  \\\n",
+       "0            NaN                  NaN                  NaN                NaN   \n",
+       "1            NaN                  NaN                  NaN                NaN   \n",
+       "2          559.0                486.0                 12.0               60.0   \n",
+       "3            NaN                  NaN                  NaN                NaN   \n",
+       "4            NaN                  NaN                  NaN                NaN   \n",
+       "\n",
+       "   hospital icu beds usage  hospital icu beds covid  vaccination initiated  \\\n",
+       "0                      NaN                      NaN                 2900.0   \n",
+       "1                      NaN                      NaN                 4410.0   \n",
+       "2                     42.0                      1.0               230587.0   \n",
+       "3                      NaN                      NaN                13690.0   \n",
+       "4                      NaN                      NaN                    NaN   \n",
+       "\n",
+       "   vaccination completed  vaccination initiated ratio  \\\n",
+       "0                 2498.0                        0.869   \n",
+       "1                 3637.0                        0.783   \n",
+       "2               205043.0                        0.801   \n",
+       "3                12693.0                        0.745   \n",
+       "4                    NaN                          NaN   \n",
+       "\n",
+       "   vaccination completed ratio  vaccination addl dose  \\\n",
+       "0                        0.749                 1038.0   \n",
+       "1                        0.646                 1425.0   \n",
+       "2                        0.712               103924.0   \n",
+       "3                        0.690                 6688.0   \n",
+       "4                          NaN                    NaN   \n",
+       "\n",
+       "   vaccination addl dose ratio  vaccination booster  vaccination booster ratio  \n",
+       "0                        0.311                199.0                      0.060  \n",
+       "1                        0.253                500.0                      0.089  \n",
+       "2                        0.361              47001.0                      0.163  \n",
+       "3                        0.364               1806.0                      0.098  \n",
+       "4                          NaN                  NaN                        NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set up dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set up the DF for cleaned covid dataset\n",
+    "df_cleaned_covid = pd.read_csv('../Outputs/cleaned_covid_counties.csv')\n",
+    "\n",
+    "df_cleaned_covid.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db111dd6",
    "metadata": {},
    "outputs": [],
    "source": []
