Update poverty analysis in analysis_covid_poverty.ipynb

--- a/CodeBase/analysis_covid_poverty.ipynb
+++ b/CodeBase/analysis_covid_poverty.ipynb
@@ -11,8 +11,9 @@
     "\n",
     "### Analysis base on findings\n",
     "- Note that even though the poverty data was pulled using the 2021 data for Virginia versus the CoVID data was from 2022, the poverty data should relatively be the same for 2022 since the change in poverty rate would not change drastically within one year.\n",
-    "- Based on the observation below, there is a correlation on how poverty affects the rate of CoVID infection and people completed the vaccination in the counties listed for Virginia. There is an overal increase in vaccination and a decrease in CoVID infections from lower poverty county to a higher poverty county. Even though there is not a lot of variation (r-value being -0.346 <= 0.05) for the vaccination completed rate which could be due to the lack of reporting, the data is still signifcant where the p-value was <= 0.05.\n",
-    "- Additionally, the infection rates vs poverty rates showed a lot of variation where the r-value was 0.494 greater than 0.05 while having a low p-value which indicated that it is significant and that poverty does have an effect on the infection rate. This could be due to the lack of medical supplies, facilities (hospital beds/treatment centers), and prevention."
+    "- Based on the observation below, there is a significant correlation between poverty correlates and vaccination rate (r=-0.35 p< 0.05) in the counties listed for Virginia. There is an overall increase in vaccination from lower poverty county to a higher poverty county. Even though there is not a lot of variation for the vaccination completed rate which could be due to the lack of reporting, the data is still signifcant.\n",
+    "- Additionally, the infection rates vs poverty rates showed a significant positive correlation (r= 0.49, p<0.05). Poverty does have a significant relationship with the infection rate. This could be due to the lack of medical supplies, facilities (hospital beds/treatment centers), and prevention.\n",
+    "- Finally, even though only counties from one state (VA) were sampled based on the poverty percentage within that state, the information found should provide a general understanding of how poverty can affect the outcome of infection and vaccination rates."
    ]
   },
   {
