moved files in correct folders

--- a/CodeBase/covid_vaccination_infection_rates.ipynb
+++ b/CodeBase/covid_vaccination_infection_rates.ipynb
@@ -441,7 +441,7 @@
     "print(\"regression equation: y=\"+str(slope.round(2))+\"*x+\"+str(intc.round(2)))\n",
     "plt.xlabel(\"Covid Cases (%)\")\n",
     "plt.ylabel(\"Vaccinated Population (%)\")\n",
-    "plt.savefig(\"covid_vaccination_regression.png\")"
+    "plt.savefig(\"../Outputs/covid_vaccination_regression.png\")"
    ]
   },
   {
@@ -495,7 +495,7 @@
     "print(\"regression equation: y=\"+str(slope.round(2))+\"*x+\"+str(intc.round(2)))\n",
     "plt.xlabel(\"Covid Cases (%)\")\n",
     "plt.ylabel(\"Vaccinated Population (%)\")\n",
-    "plt.savefig(\"covid_vaccination_regression_correct.png\")"
+    "plt.savefig(\"../Outputs/covid_vaccination_regression_correct.png\")"
    ]
   },
   {
@@ -1139,7 +1139,7 @@
     "ax1.set_ylabel('Vacination rate %')\n",
     "ax1.boxplot(grouped_df['vaccinated_pop_%'])\n",
     "plt.show()\n",
-    "plt.savefig(\"vaccination_boxplot.png\")"
+    "plt.savefig(\"../Outputs/vaccination_boxplot.png\")"
    ]
   },
   {
@@ -1211,7 +1211,7 @@
     "ax1.set_ylabel('Covid cases %')\n",
     "ax1.boxplot(grouped_df['covid_cases_%'])\n",
     "plt.show()\n",
-    "plt.savefig(\"covid_cases_boxplot.png\")"
+    "plt.savefig(\"../Outputs/covid_cases_boxplot.png\")"
    ]
   },
   {
