--- a/CodeBase/covid_max_min_analysis.ipynb
+++ b/CodeBase/covid_max_min_analysis.ipynb
@@ -448,13 +448,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_45752\\4012257207.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_7816\\4012257207.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  covid_counties_cleaned['infection rate (%)'] = round(covid_counties_cleaned['total cases'] / covid_counties_cleaned['population'] * 100, 2)\n",
-      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_45752\\4012257207.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_7816\\4012257207.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -660,7 +660,7 @@
     "plt.xlabel('County')\n",
     "plt.ylabel('Lowest 10 Infection Rate (%)')\n",
     "plt.xticks(tick_loc, top_ten_min_infection['county'], rotation = 'vertical')\n",
-    "plt.savefig('../Outputs/bar_lowest_10_infect_counties.png')\n",
+    "plt.savefig('../Outputs/bar_lowest_10_infect_counties.png', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
@@ -890,7 +890,7 @@
     "plt.xlabel('County')\n",
     "plt.ylabel('Highest 10 Infection Rate (%)')\n",
     "plt.xticks(tick_loc_max, top_ten_max_infection['county'], rotation = 'vertical')\n",
-    "plt.savefig('../Outputs/bar_highest_10_infect_counties.png')\n",
+    "plt.savefig('../Outputs/bar_highest_10_infect_counties.png', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
@@ -1120,7 +1120,7 @@
     "plt.xlabel('County')\n",
     "plt.ylabel('Lowest 10 Vaccination Rate (%)')\n",
     "plt.xticks(tick_loc, top_ten_min_vac['county'], rotation = 'vertical')\n",
-    "plt.savefig('../Outputs/bar_lowest_10_vacrate_counties.png')\n",
+    "plt.savefig('../Outputs/bar_lowest_10_vacrate_counties.png', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
@@ -1348,7 +1348,7 @@
     "plt.xlabel('County')\n",
     "plt.ylabel('Highest 10 Vaccination Rate (%)')\n",
     "plt.xticks(tick_loc, top_ten_max_vac['county'], rotation = 'vertical')\n",
-    "plt.savefig('../Outputs/bar_highest_10_vacrate_counties.png')\n",
+    "plt.savefig('../Outputs/bar_highest_10_vacrate_counties.png', bbox_inches = 'tight')\n",
     "plt.show()"
    ]
   },
