--- a/CodeBase/covid_max_min_analysis.ipynb
+++ b/CodeBase/covid_max_min_analysis.ipynb
@@ -12,11 +12,7 @@
     "# Setup dependencies\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import requests\n",
-    "import time\n",
-    "from scipy.stats import linregress"
+    "import numpy as np"
    ]
   },
   {
@@ -448,13 +444,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_7816\\4012257207.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_20172\\4012257207.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  covid_counties_cleaned['infection rate (%)'] = round(covid_counties_cleaned['total cases'] / covid_counties_cleaned['population'] * 100, 2)\n",
-      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_7816\\4012257207.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\khang\\AppData\\Local\\Temp\\ipykernel_20172\\4012257207.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
