update covid_vaccination_infection_rates for savefig location

--- a/CodeBase/covid_vaccination_infection_rates.ipynb
+++ b/CodeBase/covid_vaccination_infection_rates.ipynb
@@ -1260,7 +1260,7 @@
     "df_concat_co.plot.bar(x=\"state_ex\", y=['covid_cases_%','vaccinated_pop_%'], rot=70, title=\"The top and button 5 states in terms of Covid cases\");\n",
     "plt.xlabel('States')\n",
     "plt.ylabel('Covid case %')\n",
-    "plt.savefig(\"Covid_cases_bar_chart.png\", dpi=200)"
+    "plt.savefig(\"../OutputsCovid_cases_bar_chart.png\", dpi=200)"
    ]
   },
   {
@@ -1286,7 +1286,7 @@
     "df_concat_va.plot.bar(x=\"state_ex\", y=['vaccinated_pop_%','covid_cases_%'], rot=70, title=\"The top and button 5 states in terms of Vacination Rates\");\n",
     "plt.xlabel('States')\n",
     "plt.ylabel('Vacination %')\n",
-    "plt.savefig(\"Vacination_rates_bar_chart.png\", dpi=200)"
+    "plt.savefig(\"../OutputsVacination_rates_bar_chart.png\", dpi=200)"
    ]
   },
   {
